--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.0",
+    "stripe": "^18.0.0",
     "stylelint": "^16.13.0",
     "stylelint-config-standard": "^37.0.0",
     "stylelint-config-tailwindcss": "^0.0.7",
@@ -60,6 +61,7 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.2.5",
     "typescript": "^5.5.3",
+    "uuid": "^11.1.0",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
