--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-import-resolver-typescript": "^3.7.0",
     "framer-motion": "^12.6.3",
     "geist": "^1.3.0",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.468.0",
     "next": "^15.0.1",
     "next-seo": "^6.6.0",
